# rocm-hip-hs

./: .gitignore  README.md  hip-runtime.cabal  rocm-hip.cabal
.github/workflows/: haskell.yml
app/: Main.hs
cbits/: hip_rtc_hs.c  hip_rtc_hs.h  hip_runtime_hs.c  hip_runtime_hs.h
src/Data/Vector/HIP/: Mutable.hs
src/ROCm/: HIP.hs
src/ROCm/HIP/: Function.hs  Internal.chs  RTC.chs  Runtime.chs  TH.hs  Utils.hs
test/: MVectorSpec.hs  MemSpec.hs  MiscSpec.hs  ModuleSpec.hs  RTCSpec.hs  saxpy.hip
