cabal-version:      3.14
name:               rocm-hip

version:            0.1.0.0
synopsis:           bindings for ROCm HIP
description:        This repository contains Haskell bindings for the AMD ROCm HIP library.
license:            Apache-2.0
author:             Jiasen Wu
maintainer:         jiasenwu@hotmail.com
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    exposed-modules:  ROCm.HIP
    other-modules:
      ROCm.HIP.Runtime,
      ROCm.HIP.TH

    other-extensions: ForeignFunctionInterface
    build-depends:    base ^>=4.21.0.0,
                      template-haskell,
                      blaze-builder,
                      bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
    c-sources: cbits/hip_runtime_hs.c
    include-dirs:
        cbits
        /opt/rocm/include
    extra-lib-dirs: /opt/rocm/lib
    extra-libraries: amdhip64
    cc-options: -D__HIP_PLATFORM_AMD__
    build-tool-depends: c2hs:c2hs == 0.28.8
    ghc-options: -fllvm -ddump-splices -ddump-to-file

executable example
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.21.0.0,
        vector,
        unix,
        rocm-hip

    hs-source-dirs:   app

    default-language: Haskell2010

test-suite rocm-hip-test
    -- Import common warning flags.
    import:           warnings

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Spec.hs
    other-modules:    MemSpec, MiscSpec

    build-depends:
        base ^>=4.21.0.0,
        hspec,
        unix,
        process,
        rocm-hip

    build-tool-depends:
        hspec-discover:hspec-discover == 2.*
